fix: eth app created and wallet button integrated

--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -91,7 +91,11 @@ section {
   font-size: 14px;
   border-radius: 5px;
   /* background: linear-gradient(to right, #12d3ff 0%, #0033cc5c 103%); */
-  background: linear-gradient(90deg, rgba(60, 136, 236, 1) 31%, rgba(101, 50, 243, 1) 69%);
+  background: linear-gradient(
+    90deg,
+    rgba(60, 136, 236, 1) 31%,
+    rgba(101, 50, 243, 1) 69%
+  );
 }
 
 .Dropdown-option {
@@ -272,7 +276,11 @@ section {
   font-size: 17px;
 }
 .connect-btn {
-  background: linear-gradient(90deg, rgba(109, 61, 249, 1) 7%, rgba(69, 115, 249, 1) 41%);
+  background: linear-gradient(
+    90deg,
+    rgba(109, 61, 249, 1) 7%,
+    rgba(69, 115, 249, 1) 41%
+  );
   color: white !important;
   border: 2px solid rgba(69, 115, 249, 1);
   padding: 10px 20px;
@@ -288,7 +296,11 @@ section {
 /* your-stats-section */
 .your-stat-card-1 {
   background: rgb(60, 136, 236);
-  background: linear-gradient(90deg, rgba(60, 136, 236, 1) 31%, rgba(101, 50, 243, 1) 69%);
+  background: linear-gradient(
+    90deg,
+    rgba(60, 136, 236, 1) 31%,
+    rgba(101, 50, 243, 1) 69%
+  );
   border-radius: 10px;
   padding: 22px;
   width: 100%;
@@ -297,7 +309,11 @@ section {
 
 .liquidity-approve-btn {
   background: rgb(60, 136, 236);
-  background: linear-gradient(90deg, rgba(60, 136, 236, 1) 31%, rgba(101, 50, 243, 1) 69%);
+  background: linear-gradient(
+    90deg,
+    rgba(60, 136, 236, 1) 31%,
+    rgba(101, 50, 243, 1) 69%
+  );
   border-radius: 6px;
   padding: 10px 20px;
   color: white;
@@ -311,31 +327,31 @@ section {
 }
 
 .tesla-safe-dropdown-icon {
-  background-image: url('./images/TS-icon.svg') !important;
+  background-image: url("./images/TS-icon.svg") !important;
   background-repeat: no-repeat;
   background-position: 8px;
   background-size: 23px;
 }
 .rice-dropdown-icon {
-  background-image: url('./images/Rice-icon.svg') !important;
+  background-image: url("./images/Rice-icon.svg") !important;
   background-repeat: no-repeat;
   background-position: 8px;
   background-size: 25px;
 }
 .paz-dropdown-icon {
-  background-image: url('./images/pazzive-icon.svg') !important;
+  background-image: url("./images/pazzive-icon.svg") !important;
   background-repeat: no-repeat;
   background-position: 8px;
   background-size: 25px;
 }
 .bnb-dropdown-icon {
-  background-image: url('./images/bnb-icon.svg') !important;
+  background-image: url("./images/bnb-icon.svg") !important;
   background-repeat: no-repeat;
   background-position: 8px;
   background-size: 25px;
 }
 .busd-dropdown-icon {
-  background-image: url('./images/busd-icon.svg') !important;
+  background-image: url("./images/busd-icon.svg") !important;
   background-repeat: no-repeat;
   background-position: 8px;
   background-size: 25px;
@@ -377,7 +393,11 @@ section {
 
 .your-stat-card-2 {
   background: rgb(59, 138, 236);
-  background: linear-gradient(90deg, rgba(59, 138, 236, 1) 18%, rgba(102, 48, 243, 1) 55%);
+  background: linear-gradient(
+    90deg,
+    rgba(59, 138, 236, 1) 18%,
+    rgba(102, 48, 243, 1) 55%
+  );
   border-radius: 10px;
   padding: 22px;
   width: 100%;
@@ -575,7 +595,8 @@ section {
   font-size: 12px;
 }
 .footer-icon {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+    brightness(102%) contrast(102%);
   width: 24px;
 }
 .fuzion-seal-logo {
@@ -584,13 +605,13 @@ section {
 }
 
 /* connected screen starts here */
-.re-invest-form input[type='number'] {
+.re-invest-form input[type="number"] {
   padding: 9px !important;
   border: 1px solid #8687f4 !important;
   background: #3949b4;
   width: 371px;
 }
-.re-invest-form input[type='submit'] {
+.re-invest-form input[type="submit"] {
   padding: 9px 18px !important;
   border: 1px solid #f2f2f2 !important;
   background: transparent;
@@ -611,7 +632,7 @@ section {
 .approve-form {
   justify-content: space-between;
 }
-.approve-form input[type='number'] {
+.approve-form input[type="number"] {
   padding: 9px !important;
   border: 2px solid #3f3572 !important;
   background: #0c0726;
@@ -619,7 +640,7 @@ section {
   height: 47px;
   color: #adadad;
 }
-.approve-form input[type='submit'] {
+.approve-form input[type="submit"] {
   padding: 9px 18px !important;
   border: 1px solid #f2f2f2 !important;
   background: transparent;
@@ -933,10 +954,10 @@ section {
   .insufficient-balance-btn {
     width: auto;
   }
-  .approve-form input[type='number'] {
+  .approve-form input[type="number"] {
     width: 260px;
   }
-  .approve-form input[type='submit'] {
+  .approve-form input[type="submit"] {
     margin-left: 10px;
   }
   .ms-dd .ms-options {
@@ -1092,14 +1113,14 @@ section {
     top: 80%;
     transform: translate(-50%, -50%);
   }
-  .approve-form input[type='submit'] {
+  .approve-form input[type="submit"] {
     width: 100%;
     margin-top: 10px;
     margin-left: 0px;
     height: 44px;
     font-size: 13px;
   }
-  .approve-form input[type='number'] {
+  .approve-form input[type="number"] {
     width: 100%;
     margin-left: 0px !important;
     height: 47px;
@@ -1161,7 +1182,7 @@ section {
 }
 
 @media only screen and (max-width: 667px) {
-  .approve-form input[type='submit'] {
+  .approve-form input[type="submit"] {
     margin-left: 0px;
     width: 100%;
   }
